Aded social links to the bottom of the page

--- a/index.html
+++ b/index.html
@@ -96,10 +96,12 @@
         <small>&copy; Mark Mwaura</small>
 
         <nav class="nav">
-            <a href="#">Home</a>
-            <a href="#about">About</a>
-            <a href="#portfolio">Portfolio</a>
-            <a href="#contact">Contact</a>
+            <a href="#">Home</a> |
+            <a href="#about">About</a> |
+            <a href="#portfolio">Portfolio</a> |
+            <a href="#contact">Contact</a> |
+            <a href="http://twitter.com/markmwaura_">Twitter</a> |
+            <a href="mailto:markkmwaura@gmail.com">Email</a>
         </nav>
 
     </footer>
