--- a/index.html
+++ b/index.html
@@ -100,6 +100,7 @@
             <a href="#about">About</a> |
             <a href="#portfolio">Portfolio</a> |
             <a href="#contact">Contact</a> |
+            <a href="https://github.com/Markmwaura">Github</a> |
             <a href="http://twitter.com/markmwaura_">Twitter</a> |
             <a href="mailto:markkmwaura@gmail.com">Email</a>
         </nav>
