--- a/index.html
+++ b/index.html
@@ -32,6 +32,8 @@
     -->
                 <li><a href="#contact">Contact</a></li>
 
+                <li><a href="blog.html">Blog</a></li>
+
             </ul>
         </nav>
 
@@ -46,7 +48,7 @@
     <section class="grid">
 
         <section class="blocks">
-            <a href="speakers.html">
+            <a href="">
 
                 <h3 id="about">About</h3>
             </a>
@@ -64,7 +66,7 @@
         </section>
 
         <section class="blocks">
-            <a href="venue.html">
+            <a href="">
 
                 <h3 id="contact">Contact Me</h3>
             </a>
@@ -86,7 +88,6 @@
 
             </div>
         </section>
-
     </section>
 
     <!-- Footer -->
