Made more changes to blog.html file

--- a/blog.html
+++ b/blog.html
@@ -27,7 +27,7 @@
                 <li><a href="index.html#about">About</a></li>
                 <!--
     -->
-                <li><a href="#index.htmlportfolio">Portfolio</a></li>
+                <li><a href="index.html#portfolio">Portfolio</a></li>
                 <!--
     -->
                 <li><a href="index.html#contact">Contact</a></li>
@@ -41,16 +41,13 @@
 
     <!-- Hero -->
 
-    <section class="hero container">
-        <img src="images/geekboy.jpg" width="100%" height="auto" />
-    </section>
 
     <section class="grid">
 
         <section class="blocks">
             <a href="">
 
-                <h3 id="about">How Browsers Work</h3>
+                <h3 id="">Blog</h3>
                 <br>
             </a>
             <p>
@@ -143,7 +140,7 @@ To be a great Front End Web Developer you must have masterly of both CSS and HTM
 
             <a href="">
 
-                <h3 id="about">Object Oriented Programming</h3>
+                <h3 id="">Object Oriented Programming</h3>
             </a><br>
             <p>Object-oriented programming (OOP) is a programming language model organized around objects rather than "actions" and data rather than logic. Historically, a program has been viewed as a logical procedure that takes input data, processes it, and produces output data.<br>
             
@@ -159,7 +156,7 @@ The definition of a class is reuseable not only by the program for which it is i
 
             <a href="">
 
-                <h3 id="about">Github - What Is GitHub ?</h3>
+                <h3 id="">Github - What Is GitHub ?</h3>
             </a>
             <p>GitHub is a website/service that we hear geeks rave about all the time, yet a lot of people don’t really understand what it does. 
             <br>Git is an open-source version control system that was started by Linus Trovalds – the same person who created Linux. Git is similar to other version control systems – Subversion, CVS, and Mercurial to name a few.<br>
